# JalanAman

./: .env.example  .gitignore  Cargo.toml  Makefile  PLANNING.md  README.md  docker-compose.yml  planning.md
.claude/: settings.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_add_email.sql  003_add_contact_phone.sql
backend/src/: config.rs  error.rs  main.rs  routes.rs
backend/src/handlers/: directions.rs  health.rs  mod.rs  reports.rs  route_score.rs  sos.rs
backend/src/models/: emergency_contact.rs  mod.rs  report.rs
frontend/mobile/: Cargo.toml  Dioxus.toml
frontend/mobile/.cargo/: config.toml
frontend/mobile/android/: README.md  build-android-wsl.sh  env-wsl.sh  install-android-sdk-wsl.sh  patch-generated-android.sh  repair-android-env-wsl.sh  serve-android-wsl.sh
frontend/mobile/ios/: README.md
frontend/mobile/src/: app.rs  app_config.rs  dashboard.rs  header.rs  main.rs  map.rs  models.rs  navigation.rs  platform.rs  screens.rs  services.rs  theme.rs  utils.rs  views.rs
frontend/shared/: Cargo.toml
frontend/shared/src/: lib.rs
frontend/shared/src/components/: mod.rs  report_form.rs  route_score.rs  sos_button.rs
frontend/shared/src/utils/: types.rs
frontend/web/: Cargo.toml  Dioxus.toml  Trunk.toml  index.html  package-lock.json  package.json  serve-web-wsl.sh  tailwind.config.js
frontend/web/assets/: input.css  tailwind.css
frontend/web/public/: manifest.json  sw.js  tailwind.css
frontend/web/src/: app.rs  lib.rs  main.rs
frontend/web/src/components/: map.rs
frontend/web/src/hooks/: mod.rs  use_geolocation.rs
frontend/web/src/pages/: contacts.rs  dashboard.rs  home.rs  invite.rs  mod.rs
frontend/web/src/services/: api.rs  mod.rs  push.rs
frontend/web/src/utils/: device.rs  js.rs  mod.rs
nginx/: nginx.conf
scripts/: dev-android-auto.sh  generate_vapid_keys.sh  seed_demo.sql
