[package]
name = "jalan-aman-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jalan_aman_backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Redis
redis = { version = "0.25", features = ["tokio-comp"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web Push (VAPID)
web-push = "0.10"

# Hashing (route score cache key)
sha2 = "0.10"
hex = "0.4"

# Config / env
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
