[package]
name = "jalanaman-mobile"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jalanaman_mobile"
path = "src/main.rs"

[dependencies]
# Shared types + components
jalanaman-shared = { path = "../shared" }

# Dioxus with mobile renderer
dioxus        = { version = "0.5", features = ["mobile"] }
dioxus-router = "0.5"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP (native TLS)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio   = { version = "1", features = ["rt"] }
