[package]
name = "jalanaman-mobile"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jalanaman_mobile"
path = "src/main.rs"

[dependencies]
# Shared types + components
jalanaman-shared = { path = "../shared" }

# Dioxus with mobile renderer
dioxus        = { version = "0.6", features = ["mobile", "router"] }
dioxus-router = "0.6"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }

# HTTP (native TLS)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio   = { version = "1", features = ["rt", "time"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
