[package]
name = "jalanaman-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jalanaman-web"
path = "src/main.rs"

[dependencies]
# Shared types + components
jalanaman-shared = { path = "../shared" }

# Dioxus web target
dioxus        = { version = "0.6", features = ["web", "router"] }
dioxus-router = "0.6"

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

# HTTP (wasm-compatible)
gloo-net = { version = "0.5", features = ["http"] }

# WASM / browser APIs
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys              = { version = "0.3", features = [
    "Window", "Navigator",
    "Geolocation", "Position", "Coordinates", "PositionError", "PositionOptions",
    "Notification", "NotificationOptions", "NotificationPermission",
    "ServiceWorkerContainer", "ServiceWorkerRegistration",
    "PushManager", "PushSubscription", "PushSubscriptionOptionsInit",
    "AudioContext", "OscillatorNode", "OscillatorType", "GainNode",
    "Storage", "console",
] }

# Async utils
futures     = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# IDs
uuid = { version = "1", features = ["v4", "js"] }

# Logging + panic hook
log                       = "0.4"
console_log               = "1"
console_error_panic_hook  = "0.1"

# release profile is set in workspace Cargo.toml
